# trading-env-cpp

./: .gitignore  CMakeLists.txt  README.md  bindings.cpp  config.ini  environment.yml  gym_wrapper.py  test.cpp  train_agent.py
data/: generate_data.py
include/: Bar.h  Exceptions.h  ExecutionModel.h  MarketData.h  MarketDataLoader.h  Portfolio.h  RewardFunctions.h  TradingEnv.h
src/: ExecutionModel.cpp  MarketData.cpp  MarketDataLoader.cpp  Portfolio.cpp  RewardFunctions.cpp  TradingEnv.cpp
